--- a/myplaybook1.yml
+++ b/myplaybook1.yml
@@ -1,7 +1,7 @@
 ---
 - hosts: all
   tasks:
-  - name: i want to install webserver on ansible ubuntu node
+  - name: i want to install webserver on ansible ubuntu nodes
     apt:
       name: apache2
       state: present 
