--- a/myplaybook1.yml
+++ b/myplaybook1.yml
@@ -5,4 +5,10 @@
   - name: i want to install webserver on ansible ubuntu nodes
     apt:
       name: apache2
-      state: present 
+      state: present
+
+  - name: i want to start websever on ansible ubuntu nodes
+    service:
+      name: apache2
+      state: present
+   
