--- a/myplaybook1.yml
+++ b/myplaybook1.yml
@@ -14,4 +14,14 @@
       state: present
     when: ansible_os_family =="Debian"
 
-  
+  - name: i want to start websever on ansible RedHat nodes
+    yum:
+      name: httpd
+      state: present
+    when: ansible_os_family =="RedHat"
+
+  - name: i want to start websever on ansible RedHat nodes
+    service:
+      name: httpd
+      state: started
+    when: ansible_os_family =="RedHAt"
