--- a/myinstalljava.yml
+++ b/myinstalljava.yml
@@ -4,12 +4,12 @@
   tasks: 
   - name: i want to install java on ubuntu nodes
     apt:
-      name:
+      name: openjdk-8-jre
       state: present
     when: ansible_os_family =="Debian"
 
   - name: i want to install java on RedHAt nodes
     apt:
-      name:
+      name: java-1.8.0-openjdk
       state: present
     when: ansible_os_family =="RedHat"    
