--- a/myfilehandle.yml
+++ b/myfilehandle.yml
@@ -3,6 +3,7 @@
   become: yes
   tasks:
   - include_tasks: myfile.yml
+    ignore_errors: yes
   - name: i want to install webserver
     apt:
       name: apache2
