--- a/mytom8ubuntu16/tasks/installtomcat.yml
+++ b/mytom8ubuntu16/tasks/installtomcat.yml
@@ -2,7 +2,7 @@
 - name: i want to download tomcat tar file
   get_url:
       url: http://apache.mirrors.ionfish.org/tomcat/tomcat-8/v8.5.5/bin/apache-tomcat-8.5.5.tar.gz
-      dest: /home/apache-tomcat-8.5.5.tar.gz
+      dest: /home/ubuntu/apache-tomcat-8.5.5.tar.gz
       force_basic_auth: yes
 
 - name: create tomcat directory
@@ -11,7 +11,7 @@
      state: directory 
 
 - name: i want to extract tar file
-  unarchive:
-     src: /home/apache-tomcat-8.5.5.tar.gz
-     dest: /opt/tomcat
+  command:
+       cmd: sudo tar xzvf /home/ubuntu/apache-tomcat-8.5.5.tar.gz -C /opt/tomcat --strip-components=1
+       creates: /opt/tomcat/LICENSE
   
