--- a/mytom8ubuntu16/tasks/installjava.yml
+++ b/mytom8ubuntu16/tasks/installjava.yml
@@ -1,9 +1,9 @@
 ---
-- name: update package
+- name: update packages
   apt:
-    update_cache: yes
+     update_cache: yes
 
-- name: install java
+- name: instal java 
   apt:
     name: default-jdk
     state: present
