--- a/mytom8ubuntu16/tasks/main.yml
+++ b/mytom8ubuntu16/tasks/main.yml
@@ -1,5 +1,6 @@
 ---
--  include_tasks: installjava.yml
+# tasks file for mytom8ubuntu16
+- include_tasks: installjava.yml
 - include_tasks: createtomcatuser.yml
 - include_tasks: installtomcat.yml
 - include_tasks: UpdatePermissions.yml
